--- a/client/css/grayscale.css
+++ b/client/css/grayscale.css
@@ -380,8 +380,9 @@ input {
     fill: rgb(255,255,255);
     stroke: rgb(255,255,255);
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-weight: light;
-    font-size: 8px;
+    font-weight: lightest;
+    font-size: 12px;
+    margin-left: 15px;
 }
 
 .label {
