--- a/client/partials/viz.partials.html
+++ b/client/partials/viz.partials.html
@@ -1,11 +1,7 @@
 <section class="container content-section text-center">
 <div class="row">
     <div class="col-lg-8 col-lg-offset-2">
-        <h2>Stack Overflow Stats</h2>
-        <ul ng-repeat = "dojo in data.dojos.items">
-            <li style="color:white">{{dojo.full_name}}</li>
-            <li>{{dojo.score}}</li>
-        </ul>
+        <h2>#Posts by Language</h2>
         <div ng-controller="LineCtrl" id="line-chart" >
             <canvas id="line" class="chart chart-line" data="data"
               labels="labels" legend="true" series="series"
